vda_h264.c: Change header inclusion order.

Fixes compilation with XCode 3.2.6.
Fixes ticket #1736.